Day1 Assignment uploaded
Day1 Assignment uploaded

--- a/Day 1/DS101LU_Day1_Assignment.ipynb
+++ b/Day 1/DS101LU_Day1_Assignment.ipynb
@@ -20,6 +20,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the English word:BOWRANI\n",
+      "You guessed word is wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "word=input(\"Guess the English word:\")\n",
+    "word=word.upper()\n",
+    "A=\"RANIBOW\"\n",
+    "B=\"RAINBOW\"\n",
+    "C=\"BOWRANI\"\n",
+    "D=\"ROBWANI\"\n",
+    "if(word==A):\n",
+    "    print(\"You guessed word is wrong\")\n",
+    "elif(word==B):\n",
+    "    print(\"You guessed word is correct, it is-\",B)\n",
+    "elif(word==C):\n",
+    "    print(\"You guessed word is wrong\")\n",
+    "elif(word==D):\n",
+    "    print(\"You guessed word is wrong\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
