Day 2 Assignment Uploaded
Day 2 Assignment Uploaded

--- a/Day 2/DS101LU_Day2_Assignment.ipynb
+++ b/Day 2/DS101LU_Day2_Assignment.ipynb
@@ -49,11 +49,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List Comprehensions is one of the concept helps to simplify our code and decreases the lines of code. And it uses on only single line to complete the required code with using for loop. Inspite of writing code in a for loop, taking more than 3 lines. But when using list comprehension, it simplifies the code to use in a single line.\n",
-    "Now we will "
+    "#### List Comprehensions is one of the concept helps to simplify our code and decreases the lines of code. And it uses on only single line to complete the required code with using for loop. Inspite of writing code in a for loop, taking more than 3 lines. But when using list comprehension, it simplifies the code to use in a single line.\n",
+    "#### Now we will take one example on list comprehension."
    ]
   },
   {
