--- a/Day 3/DS101LU_Day3_Assignment.ipynb
+++ b/Day 3/DS101LU_Day3_Assignment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,20 +45,20 @@
      "text": [
       "4\n",
       "5\n",
-      "4\n",
       "6\n",
-      "8\n",
-      "set of 5 numbers entered to list1 is: [4, 5, 4, 6, 8]\n",
-      "8\n",
-      "9\n",
       "4\n",
       "8\n",
+      "set of 5 numbers entered to list1 is: [4, 5, 6, 4, 8]\n",
       "3\n",
-      "set of 5 numbers entered to list2 is: [8, 9, 4, 8, 3]\n",
+      "5\n",
+      "2\n",
+      "4\n",
+      "9\n",
+      "set of 5 numbers entered to list2 is: [3, 5, 2, 4, 9]\n",
       "concatenation of arr1 and arr2 is:\n",
-      " [4 5 4 6 8 8 9 4 8 3]\n",
+      " [4 5 6 4 8 3 5 2 4 9]\n",
       "After sorting the concatenated array is:\n",
-      " [3 4 4 4 5 6 8 8 8 9]\n"
+      " [2 3 4 4 4 5 5 6 8 9]\n"
      ]
     }
    ],
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array dimension is (3, 3)\n",
+      "Array dimension is 2\n",
       "Array size is 9\n"
      ]
     }
@@ -108,7 +108,7 @@
     "              [4,7,2],\n",
     "              [8,7,6]])\n",
     "# array dimension\n",
-    "print(\"Array dimension is\",arr1.shape)\n",
+    "print(\"Array dimension is\",arr1.ndim)\n",
     "\n",
     "#array size\n",
     "print(\"Array size is\",np.size(arr1))"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
